// tbclient.Agree
syntax = "proto3";
option java_package = "tbclient";
message Agree {
  int64 agree_num = 1;
  int64 disagree_num = 4;
}
