syntax = "proto3";
option java_package = "tbclient.GeneralTabList";
import "CommonReq.proto";

message GeneralTabListReqIdl {
  message DataReq {
    CommonReq common = 1;
    int32 tab_id = 2;
    int64 forum_id = 3;
    int32 pn = 4;
    int32 rn = 5;
    int32 scr_w = 6;
    int32 scr_h = 7;
    int32 scr_dip = 8;
    int64 last_thread_id = 9;
    int32 is_default_navtab = 10;
    string tab_name = 11;
    int32 is_general_tab = 12;
    int32 sort_type = 13;
    int32 tab_type = 14;
    int32 request_times = 20;
  }
  DataReq data = 1;
}