// tbclient.GetForumSquare.GetForumSquareResIdl
syntax = "proto3";
option java_package = "tbclient.GetForumSquare";
import "Error.proto";
import "Page.proto";

message GetForumSquareResIdl {
  Error error = 1;
  message DataRes {
    message RecommendForumInfo {
      uint64 forum_id = 2;
      string forum_name = 3;
      uint32 is_like = 4;
      uint32 member_count = 5;
      uint32 thread_count = 6;
    }
    repeated RecommendForumInfo forum_info = 2;
    Page page = 3;
  }
  DataRes data = 2;
}
