// tbclient.ThreadInfo
syntax = "proto3";
option java_package = "tbclient";
import "User.proto";
import "PollInfo.proto";
import "PbContent.proto";
import "Agree.proto";
import "Media.proto";

message ThreadInfo {
  int64 id = 1;
  string title = 3;
  int32 reply_num = 4;
  int32 view_num = 5;
  int32 last_time_int = 7;
  int32 is_top = 9;
  int32 is_good = 10;
  int32 is_voice_thread = 15;
  User author = 18;
  repeated Media media = 22;
  int32 thread_type = 26;
  int64 fid = 27;
  string fname = 28;
  int32 is_livepost = 30;
  int64 first_post_id = 40;
  int32 create_time = 45;
  int64 post_id = 52;
  int64 author_id = 56;
  uint32 is_ad = 59;
  PollInfo poll_info = 74;
  int32 is_godthread_recommend = 85;
  Agree agree = 126;
  int32 share_num = 135;
  message OriginThreadInfo {
    string title = 1;
    repeated Media media = 2;
    string fname = 4;
    string tid = 5;
    int64 fid = 7;
    message Voice {
      int32 type = 1;
    }
    repeated Voice voice_info = 12;
    repeated PbContent content = 14;
    PollInfo poll_info = 21;
    int64 pid = 25;
  }
  OriginThreadInfo origin_thread_info = 141;
  repeated PbContent first_post_content = 142;
  int32 is_share_thread = 143;
  int32 tab_id = 175;
  int32 is_deleted = 181;
  int32 is_frs_mask = 198;
  message CustomFigure {
    string background_value = 3;
  }
  CustomFigure custom_figure = 211;
  message CustomState {
    string content = 2;
  }
  CustomState custom_state = 212;
}
